Setup basic structure and added objects for generating spectra

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+ignore_folder/
+
+
+#------------------->All below here come from the Python .gitignore from github<------------
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
